force-app/main/default/objects/OS_Property__c/OS_Property__c.object-meta.xml
<CustomObject>
    <label>Unit</label>
    <nameField>
        <label>Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>