force-app/main/default/objects/OS_Property__c/fields/Balcony_Area_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Area_Sq_Ft__c</fullName>
    <formula>os_Total_Area__c *10.7639</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balcony Area Sq.Ft.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>