force-app/main/default/objects/OS_Property__c/fields/External_Area_Sq_ft__c.field-meta.xml
<CustomField>
    <fullName>External_Area_Sq_ft__c</fullName>
    <label>External Area Sq.ft.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>