force-app/main/default/objects/OS_Property__c/fields/Internal_Area_Sq_Mtr__c.field-meta.xml
<CustomField>
    <fullName>Internal_Area_Sq_Mtr__c</fullName>
    <formula>os_Internal_Area__c *0.092903</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Area Sq.Mtr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>