force-app/main/default/objects/OS_Property__c/fields/Modal_Type__c.field-meta.xml
<CustomField>
    <fullName>Modal_Type__c</fullName>
    <label>Modal Type</label>
    <length>128</length>
    <type>Text</type>
</CustomField>