force-app/main/default/objects/OS_Property__c/fields/os_Actual_Holding_Days__c.field-meta.xml
<CustomField>
    <fullName>os_Actual_Holding_Days__c</fullName>
    <formula>IF(ISPICKVAL( os_Status__c , &quot;Red Listed&quot;) , TODAY() -  os_Block_Date__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Holding Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>