force-app/main/default/objects/OS_Property__c/fields/os_Address2__c.field-meta.xml
<CustomField>
    <fullName>os_Address2__c</fullName>
    <formula>os_Address_line_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address2</label>
    <type>Text</type>
</CustomField>