force-app/main/default/objects/OS_Property__c/fields/os_Address_line_1__c.field-meta.xml
<CustomField>
    <fullName>os_Address_line_1__c</fullName>
    <label>Address line 1</label>
    <type>TextArea</type>
</CustomField>