force-app/main/default/objects/OS_Property__c/fields/os_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>os_Agency_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>