force-app/main/default/objects/OS_Property__c/fields/os_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>os_Agent_Name__c</fullName>
    <label>Agent Name</label>
    <type>TextArea</type>
</CustomField>