force-app/main/default/objects/OS_Property__c/fields/os_Agent_Name_txt__c.field-meta.xml
<CustomField>
    <fullName>os_Agent_Name_txt__c</fullName>
    <formula>os_Agent_Name_User__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Name</label>
    <type>Text</type>
</CustomField>