force-app/main/default/objects/OS_Property__c/fields/os_Agent_Name_User__c.field-meta.xml
<CustomField>
    <fullName>os_Agent_Name_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Units1</relationshipName>
    <type>Lookup</type>
</CustomField>