force-app/main/default/objects/OS_Property__c/fields/os_Agent_Representing_Client__c.field-meta.xml
<CustomField>
    <fullName>os_Agent_Representing_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Representing Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>AgentRepresentingClient</relationshipName>
    <type>Lookup</type>
</CustomField>