force-app/main/default/objects/OS_Property__c/fields/os_Amount__c.field-meta.xml
<CustomField>
    <fullName>os_Amount__c</fullName>
    <label>Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>