force-app/main/default/objects/OS_Property__c/fields/os_Amount_Colleted__c.field-meta.xml
<CustomField>
    <fullName>os_Amount_Colleted__c</fullName>
    <formula>os_Total_Amount_Paid__c / os_Final_net_price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Colleted (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>