force-app/main/default/objects/OS_Property__c/fields/os_Approval__c.field-meta.xml
<CustomField>
    <fullName>os_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval</relationshipName>
    <type>Lookup</type>
</CustomField>