force-app/main/default/objects/OS_Property__c/fields/os_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>os_Approval_Comments__c</fullName>
    <label>Approval Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>