force-app/main/default/objects/OS_Property__c/fields/os_Area__c.field-meta.xml
<CustomField>
    <fullName>os_Area__c</fullName>
    <label>Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>