force-app/main/default/objects/OS_Property__c/fields/os_Asking_Price_AED__c.field-meta.xml
<CustomField>
    <fullName>os_Asking_Price_AED__c</fullName>
    <label>Asking Price AED</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>