force-app/main/default/objects/OS_Property__c/fields/os_Balcony_Area__c.field-meta.xml
<CustomField>
    <fullName>os_Balcony_Area__c</fullName>
    <label>Balcony Area</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>