force-app/main/default/objects/OS_Property__c/fields/os_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>os_Bank_Account_Number__c</fullName>
    <label>Bank Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>