force-app/main/default/objects/OS_Property__c/fields/os_Bathrooms_US__c.field-meta.xml
<CustomField>
    <fullName>os_Bathrooms_US__c</fullName>
    <label>Bathrooms</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>