force-app/main/default/objects/OS_Property__c/fields/os_Bedroom_Type__c.field-meta.xml
<CustomField>
    <fullName>os_Bedroom_Type__c</fullName>
    <label>Bedroom Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Type 1</fullName>
            </value>
            <value>
                <fullName>Type 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>