force-app/main/default/objects/OS_Property__c/fields/os_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>os_Bedrooms__c</fullName>
    <label>Deprected Bedrooms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>