force-app/main/default/objects/OS_Property__c/fields/os_Block_Comments__c.field-meta.xml
<CustomField>
    <fullName>os_Block_Comments__c</fullName>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>