force-app/main/default/objects/OS_Property__c/fields/os_Block_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Block_Date__c</fullName>
    <label>Block Date</label>
    <type>Date</type>
</CustomField>