force-app/main/default/objects/OS_Property__c/fields/os_Block_Status__c.field-meta.xml
<CustomField>
    <fullName>os_Block_Status__c</fullName>
    <label>Block Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>