force-app/main/default/objects/OS_Property__c/fields/os_Book_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Book_Date__c</fullName>
    <label>Book Date</label>
    <type>Date</type>
</CustomField>