force-app/main/default/objects/OS_Property__c/fields/os_Broker_s_Listing_ID__c.field-meta.xml
<CustomField>
    <fullName>os_Broker_s_Listing_ID__c</fullName>
    <label>Broker&apos;s Listing ID</label>
    <type>TextArea</type>
</CustomField>