force-app/main/default/objects/OS_Property__c/fields/os_Brokerage_Representing_Client__c.field-meta.xml
<CustomField>
    <fullName>os_Brokerage_Representing_Client__c</fullName>
    <label>Brokerage Representing Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>