force-app/main/default/objects/OS_Property__c/fields/os_Build_Year_text__c.field-meta.xml
<CustomField>
    <fullName>os_Build_Year_text__c</fullName>
    <formula>Text(  os_Year_Built__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Build Year</label>
    <type>Text</type>
</CustomField>