force-app/main/default/objects/OS_Property__c/fields/os_City__c.field-meta.xml
<CustomField>
    <fullName>os_City__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>