force-app/main/default/objects/OS_Property__c/fields/os_City_Propertyfinder__c.field-meta.xml
<CustomField>
    <fullName>os_City_Propertyfinder__c</fullName>
    <label>City - Propertyfinder</label>
    <type>TextArea</type>
</CustomField>