force-app/main/default/objects/OS_Property__c/fields/os_Client_Name1__c.field-meta.xml
<CustomField>
    <fullName>os_Client_Name1__c</fullName>
    <label>Client Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>