force-app/main/default/objects/OS_Property__c/fields/os_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>os_Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ClientName</relationshipName>
    <type>Lookup</type>
</CustomField>