force-app/main/default/objects/OS_Property__c/fields/os_Commission_Status__c.field-meta.xml
<CustomField>
    <fullName>os_Commission_Status__c</fullName>
    <label>Commission Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid to Sotheby&apos;s</fullName>
            </value>
            <value>
                <fullName>Paid to 3rd Party Brokerage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>