force-app/main/default/objects/OS_Property__c/fields/os_Completion_Date_pba__c.field-meta.xml
<CustomField>
    <fullName>os_Completion_Date_pba__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>