force-app/main/default/objects/OS_Property__c/fields/os_Completion_Status_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Completion_Status_pb__c</fullName>
    <label>Completion Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>