force-app/main/default/objects/OS_Property__c/fields/os_ContactPropertyOwner_pb__c.field-meta.xml
<CustomField>
    <fullName>os_ContactPropertyOwner_pb__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PropertyOwner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Units (PropertyOwner)</relationshipLabel>
    <relationshipName>Units1</relationshipName>
    <type>Lookup</type>
</CustomField>