force-app/main/default/objects/OS_Property__c/fields/os_Country__c.field-meta.xml
<CustomField>
    <fullName>os_Country__c</fullName>
    <label>Country</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>