force-app/main/default/objects/OS_Property__c/fields/os_Date_the_RA_will_be_signed__c.field-meta.xml
<CustomField>
    <fullName>os_Date_the_RA_will_be_signed__c</fullName>
    <label>Date the RA will be signed</label>
    <type>Date</type>
</CustomField>