force-app/main/default/objects/OS_Property__c/fields/os_Description_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Description_pb__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>