force-app/main/default/objects/OS_Property__c/fields/os_Discount__c.field-meta.xml
<CustomField>
    <fullName>os_Discount__c</fullName>
    <label>Discount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>