force-app/main/default/objects/OS_Property__c/fields/os_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>