force-app/main/default/objects/OS_Property__c/fields/os_External_Property_ID__c.field-meta.xml
<CustomField>
    <fullName>os_External_Property_ID__c</fullName>
    <externalId>true</externalId>
    <label>External Property ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>