force-app/main/default/objects/OS_Property__c/fields/os_Final_net_price__c.field-meta.xml
<CustomField>
    <fullName>os_Final_net_price__c</fullName>
    <formula>os_Net_selling_price__c  -  os_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final net price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>