force-app/main/default/objects/OS_Property__c/fields/os_Floor__c.field-meta.xml
<CustomField>
    <fullName>os_Floor__c</fullName>
    <label>Floor</label>
    <type>TextArea</type>
</CustomField>