force-app/main/default/objects/OS_Property__c/fields/os_Floors__c.field-meta.xml
<CustomField>
    <fullName>os_Floors__c</fullName>
    <label>Floors</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>