force-app/main/default/objects/OS_Property__c/fields/os_Full_set_of_documents_received__c.field-meta.xml
<CustomField>
    <fullName>os_Full_set_of_documents_received__c</fullName>
    <label>Full set of documents received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>