force-app/main/default/objects/OS_Property__c/fields/os_FullBathrooms__c.field-meta.xml
<CustomField>
    <fullName>os_FullBathrooms__c</fullName>
    <label>Bathrooms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>