force-app/main/default/objects/OS_Property__c/fields/os_Geocode_Accuracy_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Geocode_Accuracy_pb__c</fullName>
    <label>Geocode Accuracy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Near Address</fullName>
            </value>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Street</fullName>
            </value>
            <value>
                <fullName>Extended Zip</fullName>
            </value>
            <value>
                <fullName>Zip</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Neighborhood</fullName>
            </value>
            <value>
                <fullName>County</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>