force-app/main/default/objects/OS_Property__c/fields/os_gsir_master_Unit_External_Id__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_master_Unit_External_Id__c</fullName>
    <label>Unit External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>