force-app/main/default/objects/OS_Property__c/fields/os_gsir_Migration_State__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_Migration_State__c</fullName>
    <label>Migration State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Migrated</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>