force-app/main/default/objects/OS_Property__c/fields/os_Half_Bathrooms_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Half_Bathrooms_pb__c</fullName>
    <label>Half Bathrooms</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>