force-app/main/default/objects/OS_Property__c/fields/os_Holding_Days__c.field-meta.xml
<CustomField>
    <fullName>os_Holding_Days__c</fullName>
    <label>Holding Days</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>