force-app/main/default/objects/OS_Property__c/fields/os_Image__c.field-meta.xml
<CustomField>
    <fullName>os_Image__c</fullName>
    <label>Image</label>
    <type>Url</type>
</CustomField>