force-app/main/default/objects/OS_Property__c/fields/os_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>os_Inquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquiry</label>
    <referenceTo>os_Request__c</referenceTo>
    <relationshipName>Inquiry</relationshipName>
    <type>Lookup</type>
</CustomField>