force-app/main/default/objects/OS_Property__c/fields/os_Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>os_Is_Closed__c</fullName>
    <description>If Status = Sold Then True Is Closed
Else If Status = Registered Then True Is Closed
Else If Status = Commission Then True Is Closed
Else If Status = Closed Then True Is Closed</description>
    <formula>(IF( OR(
ISPICKVAL(  os_Status__c ,&apos;Sold&apos;),
ISPICKVAL( os_Status__c ,&apos;Registered DLD&apos;),
ISPICKVAL( os_Status__c ,&apos;Commission&apos;),
ISPICKVAL( os_Status__c ,&apos;Closed&apos;)
),True,False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Based On Status Field Display Is Closed Checkbox</inlineHelpText>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>