force-app/main/default/objects/OS_Property__c/fields/os_Is_Lux_Job_Completed__c.field-meta.xml
<CustomField>
    <fullName>os_Is_Lux_Job_Completed__c</fullName>
    <formula>IF( os_Amount_Colleted__c &gt;  os_Project__r.os_Job_Completion__c,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The price Collected is Greater to Project Job Completion than then Box Checked.</inlineHelpText>
    <label>Is Lux Job Completed?</label>
    <type>Checkbox</type>
</CustomField>