force-app/main/default/objects/OS_Property__c/fields/os_Is_Show_in_Public_Link__c.field-meta.xml
<CustomField>
    <fullName>os_Is_Show_in_Public_Link__c</fullName>
    <label>Is Show in Public Link?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>