force-app/main/default/objects/OS_Property__c/fields/os_isblocked__c.field-meta.xml
<CustomField>
    <fullName>os_isblocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isblocked</label>
    <type>Checkbox</type>
</CustomField>