force-app/main/default/objects/OS_Property__c/fields/os_Latitude_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Latitude_pb__c</fullName>
    <label>Latitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>