force-app/main/default/objects/OS_Property__c/fields/os_Longitude_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Longitude_pb__c</fullName>
    <label>Longitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>