force-app/main/default/objects/OS_Property__c/fields/os_Lot_Size_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Lot_Size_pb__c</fullName>
    <label>Lot Size</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>