force-app/main/default/objects/OS_Property__c/fields/os_Main_Website_Image__c.field-meta.xml
<CustomField>
    <fullName>os_Main_Website_Image__c</fullName>
    <label>Main Website Image</label>
    <type>Url</type>
</CustomField>