force-app/main/default/objects/OS_Property__c/fields/os_Marble_Type_Colorway__c.field-meta.xml
<CustomField>
    <fullName>os_Marble_Type_Colorway__c</fullName>
    <label>Marble Type/Colorway</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Colorado / Silver</fullName>
            </value>
            <value>
                <fullName>Silver Lining / Silver</fullName>
            </value>
            <value>
                <fullName>East White / Silver</fullName>
            </value>
            <value>
                <fullName>China Delicato / Gold</fullName>
            </value>
            <value>
                <fullName>Namibia Pink / Rose Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>