force-app/main/default/objects/OS_Property__c/fields/os_Master_Property__c.field-meta.xml
<CustomField>
    <fullName>os_Master_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Property</label>
    <referenceTo>OS_Property__c</referenceTo>
    <relationshipName>MasterProperty</relationshipName>
    <type>Lookup</type>
</CustomField>