force-app/main/default/objects/OS_Property__c/fields/os_Measurement_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Measurement_pb__c</fullName>
    <label>Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Metric</fullName>
            </value>
            <value>
                <fullName>Non-Metric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>