force-app/main/default/objects/OS_Property__c/fields/os_Mode_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>os_Mode_of_Payment__c</fullName>
    <label>Mode of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal Cheque</fullName>
            </value>
            <value>
                <fullName>Managers Cheque</fullName>
            </value>
            <value>
                <fullName>Third Party Payment</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Not Yet Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>