force-app/main/default/objects/OS_Property__c/fields/os_Net_selling_price__c.field-meta.xml
<CustomField>
    <fullName>os_Net_selling_price__c</fullName>
    <formula>os_Sales_Price__c +  os_VAT_5__c +  os_Convenyacing_fees__c +  os_Additional_fees__c  +  os_Other_fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net selling price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>