force-app/main/default/objects/OS_Property__c/fields/os_No_of_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>os_No_of_Bedrooms__c</fullName>
    <formula>LEFT(  os_Bedrooms__c , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Bedrooms</label>
    <type>Text</type>
</CustomField>