force-app/main/default/objects/OS_Property__c/fields/os_No_of_Beds__c.field-meta.xml
<CustomField>
    <fullName>os_No_of_Beds__c</fullName>
    <label>No of Beds</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1BR</fullName>
            </value>
            <value>
                <fullName>2BR</fullName>
            </value>
            <value>
                <fullName>3BR</fullName>
            </value>
            <value>
                <fullName>4BR</fullName>
            </value>
            <value>
                <fullName>5BR</fullName>
            </value>
            <value>
                <fullName>6BR</fullName>
            </value>
            <value>
                <fullName>Garden Unit Duplex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>