force-app/main/default/objects/OS_Property__c/fields/os_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>os_of_Payment__c</fullName>
    <label>% of Payment</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>