force-app/main/default/objects/OS_Property__c/fields/os_of_Reservation_Fees_to_be_paid__c.field-meta.xml
<CustomField>
    <fullName>os_of_Reservation_Fees_to_be_paid__c</fullName>
    <label>% of Reservation Fees to be paid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>